crates/toml/tests/snapshots/invalid/string/literal-multiline-quotes-02.stderr
TOML parse error at line 1, column 29
  |
1 | a = '''15 apostrophes: ''''''''''''''''''
  |                             ^
unexpected key or value, expected newline, `#`
